@@ -25,6 +25,7 @@
 * 1 bug fix:
 
   * My _ONE_ non-rubygems-using minitest user goes to Seattle.rb!
+  * make minitest/pride work with MacRuby (MacRuby has no Fiber implementation)
 
 === 2.2.0 / 2011-05-29
 
